# sdkgenny

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  cmake.toml  format.ps1  format.sh  vcpkg.json
examples/: BadName.cpp  BitField.cpp  Car.cpp  ChildStruct.cpp  Constants.cpp  DummyData.cpp  GenericType.cpp  MultipleInheritance.cpp  NestedStruct.cpp  Parser.cpp  Sdk.cpp  Typename.cpp  Usage.cpp  badname.cpp  bigenum.cpp  bitfield.cpp  car.cpp  childstruct.cpp  constants.cpp  ctor_dtor_staticvar.cpp  dummydata.cpp  generictype.cpp  multiple_inheritance.cpp  nestedstruct.cpp  parser.cpp  sdk.cpp  template.cpp  typename.cpp  usage.cpp
extras/: GennyIda.hpp  GennyParser.hpp
include/: Genny.hpp  GennyParser.hpp  SdkGenny.hpp  sdkgenny.hpp  sdkgenny_ida.hpp  sdkgenny_parser.hpp
include/sdkgenny/: Array.hpp  Class.hpp  Constant.hpp  Enum.hpp  EnumClass.hpp  Function.hpp  GenericType.hpp  Namespace.hpp  Object.hpp  Parameter.hpp  Pointer.hpp  Reference.hpp  Sdk.hpp  StaticFunction.hpp  Struct.hpp  Type.hpp  Typename.hpp  Variable.hpp  VirtualFunction.hpp  array.hpp  class.hpp  constant.hpp  constructor.hpp  destructor.hpp  enum.hpp  enum_class.hpp  function.hpp  generic_type.hpp  namespace.hpp  object.hpp  parameter.hpp  pointer.hpp  reference.hpp  sdk.hpp  static_function.hpp  static_variable.hpp  struct.hpp  template.hpp  template_parameter.hpp  type.hpp  (+3 more)
include/sdkgenny/detail/: Indent.hpp
src/: Array.cpp  Class.cpp  Constant.cpp  Enum.cpp  EnumClass.cpp  Function.cpp  GenericType.cpp  Namespace.cpp  Object.cpp  Parameter.cpp  Pointer.cpp  Reference.cpp  Sdk.cpp  StaticFunction.cpp  Struct.cpp  Type.cpp  Typename.cpp  Variable.cpp  VirtualFunction.cpp  array.cpp  class.cpp  constant.cpp  constructor.cpp  destructor.cpp  enum.cpp  enum_class.cpp  function.cpp  generic_type.cpp  namespace.cpp  object.cpp  parameter.cpp  pointer.cpp  reference.cpp  sdk.cpp  static_function.cpp  static_variable.cpp  struct.cpp  template.cpp  template_parameter.cpp  type.cpp  (+3 more)
src/detail/: Indent.cpp  indent.cpp
